# VideoToolkit

./: README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: example_script.py
src/videotoolkit/: __init__.py  tools.py  utils.py
tests/: test_tools.py  test_utils.py
