[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videotoolkit"
version = "0.1.0"
description = "A toolkit for creating video content such as start and end slides, backgrounds, etc."
authors = [
    { name = "OxRSE", email = "rse-training@dtc.ox.ac.uk" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "reportlab>=3.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vvv --log-cli-level=INFO"
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
videotoolkit-cli = "videotoolkit.tools:main"
